# cacheflight

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
benches/: cacheflight.rs  singleflight.rs
examples/: axum_router.rs  basic_singleflight.rs  probabilistic_early_expiration.rs  stale_while_revalidate.rs  tower_layer.rs
examples/common/: mod.rs
src/: cache.rs  cacheflight.rs  error.rs  lib.rs  memory.rs  metrics.rs  policy.rs  redis.rs  singleflight.rs  tower.rs
tests/: cacheflight.rs  http_layer.rs  redis.rs  singleflight.rs  tower.rs  xfetch.rs
tests/support/: mod.rs
