[package]
name = "singleflight"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
axum = "0.8"
