[package]
name = "singleflight"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Cache-backed singleflight deduplication for async Rust services with stale-while-revalidate support"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/singleflight"
keywords = ["cache", "singleflight", "async", "tower", "deduplication"]
categories = ["asynchronous", "caching", "web-programming"]

[dependencies]
async-trait = "0.1"
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "time",
] }
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
axum = "0.8"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "singleflight"
harness = false
